<resources>
    <string name="app_name">访客登记系统</string>
    <string name="main_title">人证合一智能访客系统</string>
    <string name="main_title1">钛维人证合一智能访客系统</string>
    <string name="use_company">使用单位：</string>
    <string name="technical_support">技术支持：</string>
    <string name="telephone">24小时服务电话：</string>
    <string name="ldsj_support">理达视觉</string>
    <string name="ldsj_telephone">137-8278-7869</string>
    <string name="stamp">2862604800</string>
    <string name="text_str">http://1.fkysyberway.applinzi.com/</string>
    <string name="button_Save">保 存</string>
    <string name="button_Reset">重 置</string>
    <string name="button_Leave">离 开</string>
    <string name="button_Return">返回</string>
    <string name="from">从</string>
    <string name="to">至</string>
    <string name="age">岁；</string>
    <string name="enable">启用</string>
    <string name="disable">不启用</string>
    <string name="text_readID">读 卡</string>
    <string name="text_idNo">身份证号:</string>
    <string name="text_name">访客姓名:</string>
    <string name="text_nation">民    族:</string>
    <string name="text_sex">性    别:</string>
    <string name="text_birth">出生日期:</string>
    <string name="text_address">证件住址:</string>
    <string name="text_depa">发证机关:</string>
    <string name="text_endTime">有效期:</string>
    <string name="text_cardName">证件名称:</string>
    <string name="text_txzno">居住证号:</string>
    <string name="text_qfnum">签发次数:</string>
    <string name="text_type">类        型:</string>
    <string name="text_telephone">访客电话:</string>
    <string name="text_reason">事        由:</string>
    <string name="text_carid">车牌号:</string>
    <string name="text_visitordepa">部门/房间:</string>
    <string name="text_visitorperson">被 访 人:</string>
    <string name="text_visitorID">被访人身份证号:</string>
    <string name="text_visitortelephone">被访人电话:</string>
    <string name="text_secondScreenNotice">"请正对摄像头后刷身份证；

听到“嘀”一声后拿开证件；"</string>
    <string name="text_department">部门名称:</string>
    <string name="text_position">职位名称:</string>
    <string name="text_time">就职时间:</string>
    <string name="text_linktel">联系电话:</string>
    <string name="button_Reasion">事 由</string>
    <string name="button_Depa">部 门</string>
    <string name="button_Photo">拍 照</string>
    <string name="button_Scan">扫 描</string>
    <string name="text_notice">初始化错误，代码:</string>
    <string name="text_wait">请稍候</string>
    <string name="txtIdentityImg">证件照</string>
    <string name="txtValidatenfo">现场照</string>
    <string name="txtRecordManage">授 权</string>
    <string name="txtExit">取 消</string>
    <string name="leave_title">离 开 登 记</string>
    <string name="leaveoffice_title">离 职 登 记</string>
    <string name="bar_scan">扫描条码</string>
    <string name="read_card">自动读取身份证</string>
    <string name="all_leave">全部手工离开</string>
    <string name="visitor_title">治安重点保卫单位访客登记系统</string>
    <string name="systemset_title">系 统 设 置</string>
    <string name="personmanagement_title">人 员 管 理</string>
    <string name="baseset_title">基 本 设 置</string>
    <string name="netset_title">技 术 支 持</string>
    <string name="otherset_title">记 录 查 询</string>
    <string name="backup_title">备 份 还 原</string>
    <string name="meetingpersonquery_title">参 会 人 员 数 据 查 询</string>
    <string name="button_BaseSet">"基本
设置"</string>
    <string name="button_GNSet">"功能
配置"</string>
    <string name="button_NetSet">技术支持</string>
    <string name="button_OtherSet">"备份
还原"</string>
    <string name="button_AdvancedSet">"高级
设置"</string>
    <string name="bmfw_title">便 民 服 务</string>
    <string name="kdds_title">快 递 代 收</string>
    <string name="jfcz_title">缴 费 服 务</string>
    <string name="gpfw_title">话 费 充 值</string>
    <string name="wzcl_title">违 章 处 理</string>
    <string name="button_KDDS">"快递
代收"</string>
    <string name="button_JFCZ">"缴费
服务"</string>
    <string name="button_GPFW">"话费
充值"</string>
    <string name="button_WZCL">"违章
处理"</string>
    <string name="function_title">功 能 配 置</string>
    <string name="advancedset_title">高 级 设 置</string>
    <string name="IDNo">验证成功：</string>
    <string name="compDisp">自动保存</string>
    <string name="notDisp">手动保存</string>
    <string name="printOrNot">是否打印：</string>
    <string name="print">直接打印</string>
    <string name="noPrint">不打印</string>
    <string name="printConfig">打印设置：</string>
    <string name="printAll">完整打印</string>
    <string name="PrintPart">屏蔽打印</string>
    <string name="warnNotice">门禁信号：</string>
    <string name="warning">发送</string>
    <string name="notWarning">不发送</string>
    <string name="dataSave">是否上传：</string>
    <string name="overWrite">自动上传</string>
    <string name="manul">不上传</string>
    <string name="printLog">日志输出：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="showCardID">访客条证件号：</string>
    <string name="showReplace">星号代替</string>
    <string name="showOrign">显示原号</string>
    <string name="printTemperature">打印体温：</string>
    <string name="button_Config">配置确认</string>
    <string name="button_DeleteLog">删除日志</string>
    <string name="version_title">软件版本号</string>
    <string name="versionNo" />
    <string name="button_update">软件更新</string>
    <string name="takePhoto">拍照</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book…</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found…</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
</resources>