<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background2" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/TextBackup" android:background="@drawable/backselector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="20.0dip" />
        <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textTitle" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/function_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/frame_shape" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="120.0dip" android:layout_marginRight="120.0dip" android:layout_weight="6.0">
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/textIDPort" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="端口号：" android:layout_weight="1.0" />
            <EditText android:textSize="22.0sp" android:textStyle="bold" android:textColor="#ff0093dd" android:id="@id/editIDPort" android:background="@android:drawable/edit_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:singleLine="true" android:layout_weight="0.7" />
            <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.8" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/txtValidate" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="比对阀值：" android:layout_weight="1.0" />
            <EditText android:textSize="22.0sp" android:textStyle="bold" android:textColor="#ff0093dd" android:id="@id/edtValidate" android:background="@android:drawable/edit_text" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:singleLine="true" android:maxLength="2" android:layout_weight="0.5" android:inputType="number" />
            <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/IDNo" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/IDNo" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="22.0sp" android:id="@id/radio1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/compDisp" android:layout_weight="1.0" />
                <RadioButton android:textSize="22.0sp" android:id="@id/radio2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/notDisp" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/printOrNot" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/printOrNot" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="22.0sp" android:id="@id/radio3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/print" android:layout_weight="1.0" />
                <RadioButton android:textSize="22.0sp" android:id="@id/radio4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/noPrint" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="23.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/showCardId" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/showCardID" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="20.0sp" android:id="@id/radio11" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/showReplace" android:layout_weight="1.0" />
                <RadioButton android:textSize="20.0sp" android:id="@id/radio12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/showOrign" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="23.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/printTemperature" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/printTemperature" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="20.0sp" android:id="@id/radio13" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/yes" android:layout_weight="1.0" />
                <RadioButton android:textSize="20.0sp" android:id="@id/radio14" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/no" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/printConfig" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/warnNotice" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="22.0sp" android:id="@id/radio5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/warning" android:layout_weight="1.0" />
                <RadioButton android:textSize="22.0sp" android:id="@id/radio6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/notWarning" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/dataSave" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dataSave" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="22.0sp" android:id="@id/radio7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/overWrite" android:layout_weight="1.0" />
                <RadioButton android:textSize="22.0sp" android:id="@id/radio8" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/manul" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/printLog" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/printLog" android:layout_weight="1.0" />
            <RadioGroup android:orientation="horizontal" android:id="@id/raidoGroup5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_weight="1.5">
                <RadioButton android:textSize="22.0sp" android:id="@id/radio9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:checked="true" android:text="@string/yes" android:layout_weight="1.0" />
                <RadioButton android:textSize="22.0sp" android:id="@id/radio10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/no" android:layout_weight="3.0" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <Button android:id="@id/btn1" android:background="@drawable/fun_save_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <Button android:id="@id/btn2" android:background="@drawable/delete_log_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="120.0dip" />
            <Button android:id="@id/btn3" android:background="@drawable/show_log_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="120.0dip" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.4">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/use_company" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/technical_support" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/telephone" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>