<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background2" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/TextBackup" android:background="@drawable/backselector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="20.0dip" />
        <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textTitle" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_title" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="6.0">
        <TextView android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="0.6" />
        <Button android:id="@id/btnRestore" android:background="@drawable/database_restore_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <Button android:id="@id/btnBackup" android:background="@drawable/database_backup_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="0.6" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/use_company" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/technical_support" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/telephone" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>