<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background2" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:id="@id/TextBackup" android:background="@drawable/backselector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:onClick="back" android:layout_marginStart="20.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@color/yellow" android:id="@id/leaveNotice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="【直接刷身份证或\n  点击右侧按钮离签】" android:layout_toRightOf="@id/TextBackup" android:layout_alignTop="@id/TextBackup" />
        <TextView android:textSize="50.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/textTitle" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/leave_title" android:layout_centerHorizontal="true" />
        <Button android:id="@id/textAllLeave" android:background="@drawable/all_leave_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@id/TextBackup" android:layout_alignParentRight="true" android:onClick="all_leave_by_hand" android:layout_marginEnd="20.0dip" />
    </RelativeLayout>
    <LinearLayout android:background="@drawable/frame_shape" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="15.0sp" android:layout_marginTop="10.0sp" android:layout_marginRight="15.0sp" android:layout_marginBottom="15.0sp" android:layout_weight="6.0">
        <ListView android:id="@id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3">
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/use_company" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/technical_support" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="bottom" android:id="@id/text3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/telephone" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>